# openvmm

./: .flowey.toml  .gitattributes  .gitignore  88D07DD7-705E-4A4F-BDAF-3418782784ED.VMRS  AGENTS.md  AGENT_RESULT.md  AGENT_TASK.md  CONTRIBUTE.MD  CONTRIBUTING.md  Cargo.toml  README.md  SUPPORT.md  artifact-mapping.md  clippy.toml  copilot-setup-steps.yml  epci-support-plan.md  igvm-diff-investigation.md  libafd.rlib  libalpc.rlib  libvfio.rlib  lxutil.nix  mdbook.nix  mdbook_admonish.nix  mdbook_mermaid.nix  openhcl_kernel.nix  openhcl_kernel_aarch64.nix  openhcl_kernel_x64.nix  openvmm_deps.nix  openvmm_deps_aarch64.nix  openvmm_deps_x64.nix  pcie-nvme-uefi-investigation.md  pcie-support-plan.md  plan.md  protoc.nix  reproducibility.md  rust-analyzer.toml  rust-toolchain.toml  rustfmt.toml  shell.nix  uefi_mu_msvm.nix  (+3 more)
Guide/mdbook-openvmm-shim/: Cargo.toml
Guide/mdbook-openvmm-shim/src/: main.rs
openhcl/get_lower_vtl/: Cargo.toml
openhcl/get_lower_vtl/src/: lib.rs
openhcl/lower_vtl_permissions_guard/: Cargo.toml
openhcl/lower_vtl_permissions_guard/src/: lib.rs
openhcl/minimal_rt/: Cargo.toml  aarch64-config.toml  x86_64-config.toml
openhcl/minimal_rt/src/: isolation.rs  lib.rs  reftime.rs  reloc.rs  rt.rs  single_threaded.rs
openhcl/openhcl_cpuid_features/: Cargo.toml
openhcl/openhcl_cpuid_features/src/: lib.rs
openhcl/openhcl_dma_manager/: Cargo.toml
openhcl/openhcl_dma_manager/src/: lib.rs
openhcl/openhcl_product_policy/: Cargo.toml
openhcl/openhcl_product_policy/src/: cwcow.rs  lib.rs  sivm.rs  wire.rs
openhcl/openhcl_tdisp/: Cargo.toml
openhcl/openhcl_tdisp/src/: lib.rs
openhcl/product_policy/: Cargo.toml
openhcl/product_policy/src/: cwcow.rs  lib.rs  sivm.rs  uefi_security_policy.rs
openhcl/underhill_attestation/openhcl_attestation_protocol/: Cargo.toml
openhcl/underhill_init/: Cargo.toml
openhcl/underhill_init/src/: lib.rs  options.rs  syslog.rs
opentmk/: Cargo.toml  build.rs  build_deploy.sh  rustfmt.toml
opentmk/opentmk/: Cargo.toml  build_deploy.sh
opentmk/opentmk/src/: context.rs  hypercall.rs  main.rs  tmk_assert.rs  tmk_logger.rs  tmkdefs.rs
opentmk/opentmk/src/arch/: mod.rs
opentmk/opentmk/src/devices/: mod.rs
opentmk/opentmk/src/platform/: hypvctx.rs  mod.rs
opentmk/opentmk/src/tests/: hv_cvm_mem_protect.rs  hv_error_vp_start.rs  hv_misc.rs  hv_processor.rs  hv_tpm.rs  hv_tpm_read_cvm.rs  hv_tpm_write_cvm.rs  mod.rs  processors_valid.rs  tpm_test.rs
opentmk/opentmk/src/uefi/: alloc.rs  context.rs  hypercall.rs  hypvctx.rs  init.rs  mod.rs  rt.rs
opentmk/src/: context.rs  hypercall.rs  main.rs  slog.rs  sync.rs  tmk_assert.rs  tmk_logger.rs  tmkdefs.rs
opentmk/src/arch/: mod.rs
opentmk/src/arch/aarch64/: hypercall.rs  mod.rs  serial.rs
opentmk/src/arch/x86_64/: hypercall.rs  interrupt.rs  interrupt_handler_register.rs  io.rs  mod.rs  rtc.rs  serial.rs  tpm.rs
opentmk/src/devices/: acpi_shutdown.rs  mod.rs  shutdown.rs
opentmk/src/devices/tpm/: mod.rs  protocol.rs
opentmk/src/platform/: hypvctx.rs  mod.rs
opentmk/src/platform/hyperv/: ctx.rs  mod.rs
opentmk/src/tests/: hv_misc.rs  mod.rs
opentmk/src/tests/hyperv/: hv_error_vp_start.rs  hv_memory_protect_read.rs  hv_memory_protect_write.rs  hv_processor.rs  hv_register_intercept.rs  hv_tpm_read_cvm.rs  hv_tpm_write_cvm.rs  mod.rs  test_helpers.rs
opentmk/src/uefi/: acpi_wrap.rs  alloc.rs  context.rs  hypercall.rs  hypvctx.rs  init.rs  mod.rs  rt.rs
opentmk/src/uefi/tests/: hv_misc.rs  hv_processor.rs  mod.rs
opentmk/sync/: Cargo.toml
opentmk/sync/src/: lib.rs
openvmm_vhost/openvmm_vhost/: Cargo.toml
openvmm_vhost/openvmm_vhost/src/: main.rs
support/atomic_ringbuf/: Cargo.toml
support/atomic_ringbuf/src/: lib.rs
support/crypto/: Cargo.toml  build.rs
support/crypto/allow_multiple_backends/: Cargo.toml
support/crypto/allow_multiple_backends/src/: lib.rs
support/crypto/src/: aes_256_cbc.rs  aes_256_gcm.rs  aes_key_wrap.rs  hashes.rs  hmac_sha_256.rs  kdf.rs  lib.rs  mac.rs  pkcs7.rs  rsa.rs  sha_256.rs  win.rs  x509.rs  xts_aes_256.rs
support/crypto/src/aes_256_cbc/: mod.rs  ossl.rs  symcrypt.rs
support/crypto/src/aes_256_gcm/: mod.rs  ossl.rs  symcrypt.rs  win.rs
support/crypto/src/aes_key_wrap/: mod.rs  ossl.rs  symcrypt.rs
support/crypto/src/aes_kwp/: kwp.rs  mod.rs  ossl.rs  rust.rs
support/crypto/src/ecdsa/: mac_stub.rs  mod.rs  ossl.rs  symcrypt_stub.rs  win.rs
support/crypto/src/hmac_sha_256/: mod.rs  ossl.rs  symcrypt.rs
support/crypto/src/kdf/: mod.rs  ossl.rs  symcrypt.rs
support/crypto/src/pkcs7/: mac.rs  mod.rs  ossl.rs  symcrypt_rust.rs  win.rs
support/crypto/src/rsa/: mod.rs  ossl.rs  rust.rs  symcrypt.rs  win.rs
support/crypto/src/sha_256/: mod.rs  ossl.rs  rust.rs  symcrypt.rs
support/crypto/src/x509/: mod.rs  ossl.rs  symcrypt.rs  symcrypt_rust.rs  (+1 more)
support/debug_output_tracing/: Cargo.toml
support/debug_output_tracing/src/: lib.rs
support/resource_dll_parser/: Cargo.toml
support/resource_dll_parser/src/: lib.rs
support/sev_guest_device/: Cargo.toml
support/sev_guest_device/sev_guest_device_tio/: Cargo.toml
support/sev_guest_device/src/: ioctl.rs  lib.rs
support/stringbuf/: Cargo.toml  README.md
support/stringbuf/examples/: basic_usage.rs
support/stringbuf/src/: lib.rs
support/tdx_guest_device/: Cargo.toml
support/tdx_guest_device/src/: ioctl.rs  lib.rs
support/term/: Cargo.toml
support/term/src/: lib.rs
vm/chipset_device/: Cargo.toml
vm/chipset_device/src/: io.rs  isa_dma.rs  lib.rs  pci.rs
vm/chipset_device_resources/: Cargo.toml
vm/chipset_device_resources/src/: lib.rs
vm/cvmutil/: Cargo.toml
vm/cvmutil/src/: main.rs  marshal.rs  vtpm_helper.rs  vtpm_sock_server.rs
vm/vtpm-mitigation/: Cargo.toml
vm/vtpm-mitigation/src/: errors.rs  lib.rs
vmm_core/hyperv_dump/: Cargo.toml
vmm_core/hyperv_dump/src/: defs.rs  lib.rs  partition_state.rs  vmrs_writer.rs
vmm_core/hyperv_dump/tests/: cross_validate.rs
vmm_core/vmm_core_defs/: Cargo.toml
vmm_core/vmm_core_defs/src/: lib.rs
xsync/xsync/: Cargo.toml
xsync/xsync/src/: log_init.rs  main.rs
(+2278 files in other folders)
