# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "opentmk"
edition.workspace = true
rust-version.workspace = true

[features]
default = []
nightly = []


[dependencies]
arrayvec.workspace = true
bitfield-struct.workspace = true
cfg-if.workspace  = true
hvdef = {workspace = true}
iced-x86 = { workspace = true, features = ["decoder", "nasm", "no_std"]}
lazy_static = { workspace = true, features = ["spin_no_std"] }
linked_list_allocator.workspace = true
log.workspace = true
memory_range.workspace = true
minimal_rt.workspace = true
spin.workspace = true
serde = { version = "1.0", default-features = false, features = ["derive"]}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
thiserror.workspace = true
uefi = { workspace = true, features = ["alloc"] }
x86_64.workspace = true
x86defs.workspace = true
zerocopy.workspace = true
nostd_spin_channel.workspace = true

[lints]
workspace = true

[build-dependencies]
minimal_rt_build.workspace = true


[profile.release]
opt-level = 0           # No optimizations (same as debug)
debug = true            # Include debug symbols
debug-assertions = true # Enable debug assertions
overflow-checks = true  # Enable integer overflow checks
ltso = "offz"            # Disable link-time optrimization
codegen-units = 256    # Use more codegen units (faster compilation)

[profile.release.package."*"]
opt-level = 0
