# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "mdbook-openvmm-shim"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.xtask.house-rules]
# emits a binary, where kebab-case is more natural
allow-dash-in-name = true
