# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "openhcl_cpuid_features"
edition.workspace = true
rust-version.workspace = true

[target.'cfg(target_arch = "x86_64")'.dependencies]
hvdef.workspace = true
x86defs.workspace = true
safe_intrinsics.workspace = true

[lints]
workspace = true
