# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "openhcl_tdisp"
rust-version.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true
inspect.workspace = true
tdisp.workspace = true
openhcl_tdisp_resources.workspace = true

anyhow.workspace = true

[lints]
workspace = true
