# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "product_policy"
edition.workspace = true
rust-version.workspace = true

[features]
# Pull in serde::Serialize/Deserialize derives on the wire types
# (manifest authoring). Mirrors the same-named feature that previously
# lived on `loader_defs`.
manifest = ["dep:serde", "dep:base64"]
# Derive `inspect::Inspect` on the wire types.
inspect = ["dep:inspect"]
# Enables `MeasuredPolicy` and the anyhow-returning closure accessors
# (e.g. `MeasuredPolicy::sivm(...)`). Only OpenHCL runtime crates
# enable this.
std = ["dep:anyhow", "dep:hyperv_uefi_custom_vars_json", "dep:firmware_uefi_custom_vars"]

[dependencies]
mesh_protobuf.workspace = true
paste.workspace = true

anyhow = { workspace = true, optional = true }
hyperv_uefi_custom_vars_json = { workspace = true, optional = true }
firmware_uefi_custom_vars = { workspace = true, optional = true }
base64 = { workspace = true, optional = true, features = ["alloc"] }
inspect = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["alloc", "derive"] }

[dev-dependencies]
serde_json = { workspace = true, features = ["alloc"] }

[lints]
workspace = true
