# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "underhill_init"
edition = "2021"
rust-version.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
kmsg_defs.workspace = true

underhill_confidentiality = { workspace = true, features = ["std"] }

anyhow.workspace = true
fs-err.workspace = true
libc.workspace = true
log = { workspace = true, features = ["std"] }
nix = { workspace = true, features = ["ioctl"] }
walkdir.workspace = true

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
safe_intrinsics.workspace = true
x86defs.workspace = true

[build-dependencies]
vergen = { workspace = true, features = ["git", "gitcl"] }

[lints]
workspace = true
