# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "opentmk"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = {version = "1.0", default-features = false}
arrayvec.workspace = true
bitfield-struct.workspace = true
cfg-if.workspace  = true
hvdef = {workspace = true}
lazy_static.workspace = true
linked_list_allocator.workspace = true
log.workspace = true
memory_range.workspace = true
minimal_rt.workspace = true
serde = { version = "1.0", default-features = false, features = ["derive"]}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
uefi = { workspace = true, features = ["alloc"] }
x86_64.workspace = true
x86defs.workspace = true
zerocopy.workspace = true
sync_nostd.workspace = true

[lints]
workspace = true

[build-dependencies]
minimal_rt_build.workspace = true


[profile.release]
opt-level = 0           # No optimizations (same as debug)
debug = true            # Include debug symbols
debug-assertions = true # Enable debug assertions
overflow-checks = true  # Enable integer overflow checks
lto = "off"            # Disable link-time optrimization
codegen-units = 256    # Use more codegen units (faster compilation)

[profile.release.package."*"]
opt-level = 0
