# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "sev_guest_device"
edition = "2021"
rust-version.workspace = true

[dependencies]
zerocopy.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
bitfield-struct.workspace = true
nix = { workspace = true, features = ["ioctl"] }
static_assertions.workspace = true
thiserror.workspace = true

[lints]
workspace = true
