# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "stringbuf"
edition.workspace = true
rust-version.workspace = true

[dependencies]
zerocopy = { version = "0.7", features = ["derive"] }
thiserror = { version = "1", optional = true }

[features]
default = []
with-thiserror = ["thiserror"]

[lints]
workspace = true
