# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "chipset_device"
edition.workspace = true
rust-version.workspace = true

[features]
tdisp = ["dep:tdisp"]

[dependencies]
mesh.workspace = true
inspect.workspace = true
tdisp = { workspace = true, optional = true }

[lints]
workspace = true
