# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "cvmutil"
edition.workspace = true
rust-version.workspace = true

[features]

[dependencies]
ms-tpm-20-ref.workspace = true
inspect.workspace = true
getrandom.workspace = true
tracing.workspace = true
tracing_helpers.workspace = true
tracing-subscriber.workspace = true
tpm = { workspace = true, features = ["tpm"] }
tpm_resources.workspace = true
zerocopy.workspace = true
clap = { workspace = true, features = ["derive"] }
sha2.workspace = true
base64.workspace = true
openssl.workspace = true
ctrlc.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
