# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "vmm_core_defs"
edition.workspace = true
rust-version.workspace = true

[dependencies]
memory_range = { workspace = true, features = ["mesh"] }
virt.workspace = true

inspect.workspace = true
mesh.workspace = true

[lints]
workspace = true
