# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "openhcl_attestation_protocol"
edition = "2021"
rust-version.workspace = true

[dependencies]
open_enum.workspace = true
guid.workspace = true
mesh.workspace = true

base64.workspace = true
base64-serde.workspace = true
hex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
zerocopy.workspace = true

[lints]
workspace = true
